fixed treatment cards not having correct width on narrow viewports on IE11

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1480,9 +1480,7 @@ label[for="burger"] {
 
 @media only screen and (max-width: 1300px) {
     .treatmeant-cards__container>div {
-        -webkit-box-flex: 1;
-        -ms-flex: 1 0 100%;
-        flex: 1 0 100%;
+        width: 100%;
     }
 
     .treatmeant-card__visia-bottom {
